tests/sources/good/line_mix.graph
5 4
2 4
1 3
2
1 5
4
