tests/sources/bad/line_bad_1.graph
5 4
2 3
1 3
1 2
5
4
